part1/logapps/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: log-volume
          emptyDir: {}
      containers:
        - name: logoutput
          image: pndy/logoutput:1.10.1
          volumeMounts:
            - name: log-volume
              mountPath: /usr/src/app/files
        - name: loggenerator
          image: pndy/loggenerator:1.10
          volumeMounts:
            - name: log-volume
              mountPath: /usr/src/app/files
