part1/logapps/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
  - port: 1235
    targetPort: 3000
    protocol: TCP
